Fix GitHub ribbon z-index

--- a/demo/style.less
+++ b/demo/style.less
@@ -278,4 +278,5 @@ footer {
   top: 0;
   right: 0;
   border: 0;
+  z-index: 100;
 }
